# factory-incident-response-hub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 202607140001_create_runtime_metadata.py  (+1 more)
backend/scripts/: start.sh
backend/tests/: conftest.py  test_agent_stage3.py  test_api_stage2.py  test_config.py  test_domain_logic.py  test_frontend_stage6_support.py  test_health.py  test_logging.py  test_rpa_stage5.py  test_workflow_stage4.py
docs/: api-design.md  architecture.md  demo-guide.md  final-acceptance-report.md  implementation-status.md  project-spec.md  stage5-mes-rpa.md  technical-review-guide.md  workflow-design.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/lib/: api.ts  (+2 more)
legacy-mes/: Dockerfile  requirements.txt
legacy-mes/legacy_mes/: app.py
legacy-mes/tests/: test_legacy_mes.py
n8n/: README.md
n8n/workflows/: 01-incident-intake-analysis.json  02-critical-incident-approval.json  03-work-order-api-rpa-fallback.json  04-sla-escalation-monitor.json  05-incident-closure-knowledge.json  99-global-error-handler.json
rpa-worker/: Dockerfile  requirements.txt
rpa-worker/rpa_worker/: app.py  runner.py  schemas.py
rpa-worker/tests/: test_rpa_worker.py
scripts/: check-docs.ps1  import-n8n-workflows.ps1  smoke-test.ps1
(+36 files in other folders)
