[project]
name = "factory-incident-response-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for Factory Incident Response Hub"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic==1.13.3",
  "asyncpg==0.29.0",
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "pydantic-settings==2.5.2",
  "sqlalchemy[asyncio]==2.0.35",
  "uvicorn[standard]==0.30.6"
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q"
